# libjsc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
src/: js.c  jsc.c  jsc.h
src/jsc/: JSBasePrivate.h  JSContextPrivate.h  JSContextRefPrivate.h  JSHeapFinalizerPrivate.h  JSLockRefPrivate.h  JSMarkingConstraintPrivate.h  JSObjectRefPrivate.h  JSScriptRefPrivate.h  JSStringRefPrivate.h  JSValuePrivate.h  JSVirtualMachinePrivate.h  JSWeakObjectMapRefPrivate.h  JSWeakPrivate.h  README.md
test/: CMakeLists.txt
